# oracle-cli

./: .gitignore  CLAUDE.md  README.md  config.example.yaml  pyproject.toml
docker/3x-ui/: docker-compose.yml
docker/caddy/: Caddyfile  docker-compose.yml
docker/hermes/: Dockerfile  docker-compose.yml
docker/keepalive/: Dockerfile  docker-compose.yml  keepalive.sh
docker/obsidian-sync/: docker-compose.yml  rclone.conf.example  sync.sh
oracle_cli/: cli.py  config.py  oci_api.py  ssh.py
scripts/: setup-base.sh  setup-docker.sh  setup-firewall.sh  setup-security.sh  setup-tailscale.sh  setup-xray-firewall.sh
